--- a/app/src/main/res/layout/activity_confirmation_page.xml
+++ b/app/src/main/res/layout/activity_confirmation_page.xml
@@ -29,6 +29,7 @@
             android:textColor="@android:color/white"
             android:text="Your record has been successfully added"
             android:textAlignment="center"
+            android:layout_gravity="center_horizontal"
             android:textSize="18dp"
             android:layout_marginTop="100dp"
             />
@@ -41,7 +42,8 @@
             app:srcCompat="@drawable/ic_check_circle_black_24dp"
             tools:ignore="VectorDrawableCompat"
             android:layout_marginTop="150dp"
-            android:layout_marginLeft="30dp"/>
+            android:layout_gravity="center_horizontal"
+            />
 
 
 
